# ProgressiveMeshes

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: ga_constant_color_vert.glsl  ga_unlit_texture_frag.glsl  ga_unlit_texture_vert.glsl
include/controls/: controls.hpp
include/mesh/: Mesh.h  objLoader.h  pMesh.h
include/shader/: shaderLoader.hpp
src/: main.cpp
src/controls/: controls.cpp
src/mesh/: Mesh.cpp  objLoader.cpp  pMesh.cpp
src/shader/: shaderLoader.cpp
